--- a/book/概述.html
+++ b/book/概述.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>cs - cs_learn</title>
+        <title>概述 - cs_learn</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html" class="active"><strong aria-hidden="true">1.</strong> cs</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="2.信息的表示和处理.html"><strong aria-hidden="true">1.1.1.</strong> 2.信息的表示和处理</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item "><a href="Rc.html"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="linux.html"><strong aria-hidden="true">3.</strong> Linux</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="命令.html"><strong aria-hidden="true">3.1.</strong> 命令</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="2.信息的表示和处理.html"><strong aria-hidden="true">1.1.1.</strong> 2.信息的表示和处理</a></li></ol></li><li class="chapter-item expanded "><a href="网络.html"><strong aria-hidden="true">1.2.</strong> 网络</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="http.html"><strong aria-hidden="true">1.2.1.</strong> http</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="概述.html" class="active"><strong aria-hidden="true">1.2.1.1.</strong> 概述</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item "><a href="Rc.html"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="linux.html"><strong aria-hidden="true">3.</strong> Linux</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="命令.html"><strong aria-hidden="true">3.1.</strong> 命令</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,14 +142,87 @@
                         <!-- Page table of contents -->
                         <div class="sidetoc"><nav class="pagetoc"></nav></div>
 
-                        <p><a href="./csapp.html">cs:app</a></p>
+                        <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
+<h2 id="媒体类型"><a class="header" href="#媒体类型">媒体类型</a></h2>
+<p>每种通过<code>web</code>传输的对象都是<strong>媒体类型</strong>,<code>HTTP</code> 为这些对象打上<code>MIME type</code> 的数据格式标签.</p>
+<blockquote>
+<p>MIME是一种文本标记，表示一种主要的对象类型和一个特定的子类型,用&quot;/&quot;分割</p>
+</blockquote>
+<h2 id="uri"><a class="header" href="#uri">URI</a></h2>
+<blockquote>
+<p><code>Uniform Resource Identifier(URI)</code>统一资源标识符，唯一标识并定位信息资源</p>
+</blockquote>
+<h3 id="url"><a class="header" href="#url">URL</a></h3>
+<blockquote>
+<p>统一资源定位符,描述了一台特定服务器上某资源的特定位置</p>
+</blockquote>
+<p>三部分:</p>
+<ul>
+<li>方案:标明访问资源所使用的协议类型(<code>Http</code> 协议)</li>
+<li>服务器因特网地址</li>
+<li>指定<code>web</code> 服务器的某个资源</li>
+</ul>
+<h3 id="urn"><a class="header" href="#urn">URN</a></h3>
+<p>统一资源名</p>
+<blockquote>
+<p>作为特定内容的唯一名称,与资源的所在地无关.</p>
+</blockquote>
+<h1 id="事务"><a class="header" href="#事务">事务</a></h1>
+<blockquote>
+<p>一个<code>Http</code>事务由一条请求命令和一个响应结果组成,通过<code>HTTP message</code> 报文的数据块进行</p>
+</blockquote>
+<h2 id="方法"><a class="header" href="#方法">方法</a></h2>
+<blockquote>
+<p>HTTP请求命令,</p>
+</blockquote>
+<p><img src="https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304292118765.png" alt="image-20230429211827241" /></p>
+<h2 id="状态码"><a class="header" href="#状态码">状态码</a></h2>
+<h1 id="报文"><a class="header" href="#报文">报文</a></h1>
+<ul>
+<li>请求报文</li>
+<li>响应报文</li>
+</ul>
+<h2 id="起始行"><a class="header" href="#起始行">起始行</a></h2>
+<blockquote>
+<p>报文的第一行,说明报文的目的</p>
+</blockquote>
+<h2 id="首部字段"><a class="header" href="#首部字段">首部字段</a></h2>
+<blockquote>
+<p>起始行后面带有零个或多个首部字段(k-v形式,中间用<code>:</code> 分隔)</p>
+</blockquote>
+<h2 id="主体"><a class="header" href="#主体">主体</a></h2>
+<blockquote>
+<p>可选部分,包含所有类型的数据，可以包含任意的二进制数据.</p>
+</blockquote>
+<h1 id="连接"><a class="header" href="#连接">连接</a></h1>
+<h2 id="tcpip"><a class="header" href="#tcpip">TCP/IP</a></h2>
+<p><code>http</code> 是应用层协议。</p>
+<p><img src="https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304292135407.png" alt="image-20230429213541388" /></p>
+<blockquote>
+<p><code>TCP/IP</code> 隐藏了网络和硬件的特点,弱点,可以使各类计算机和网络进行可靠的通信.建立了<code>tcp</code> 连接,客户端和服务端之间的报文交换不会丢失.</p>
+</blockquote>
+<h2 id="ip地址端口号"><a class="header" href="#ip地址端口号">IP地址&amp;端口号</a></h2>
+<blockquote>
+<p>客户端发送请求报文前,需要用网络协议(<code>Internet Protocol</code>IP)地址和端口和服务器之间建立一条<code>TCP/IP</code> 连接</p>
+</blockquote>
+<h1 id="web结构组件"><a class="header" href="#web结构组件">web结构组件</a></h1>
+<ul>
+<li>代理 </li>
+<li>缓存</li>
+<li>网关</li>
+<li>隧道</li>
+<li>Agent代理</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="http.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="csapp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="rust_index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -159,8 +232,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="http.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="csapp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="rust_index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
